[package]
name = "tokio-task-tracker"
version = "1.1.1"
edition = "2021"
description = "A simple graceful shutdown solution for tokio."
license = "MIT"

[dependencies]
tokio = { version = "1.32.0", features = ["sync", "signal", "time", "rt"] }
tokio-util = "0.7.9"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros"] }
