[package]
name = "tokio-task-tracker"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/jwalton/rust-tokio-task-tracker/"
description = "A simple graceful shutdown solution for tokio."
license = "MIT"

[dependencies]
tokio = { version = "1.32.0", features = ["sync", "signal", "time", "rt"] }
tokio-util = "0.7.9"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros"] }
